fix one layout problem

--- a/main.css
+++ b/main.css
@@ -1570,7 +1570,7 @@ padding-bottom: 8%;
 
 .notice{
   /*border:2px solid red;*/
-  width: 30%;
+  width: 35%;
   margin: auto;
    margin-top: 4%;
   height: 50vh;
